<resources>
    <string name="app_name">Digital Bank</string>
    <string name="mock_message">Mock message</string>
    <string name="value_zero_mock">R$ 0,00</string>
    <string name="generic_error">Erro desconhecido. \nTente novamente mais tarde</string>
    <string name="error_txt_empty_password">Campo de senha vazio</string>
    <string name="error_txt_empty_email">Campo de e-mail vazio</string>
    <string name="error_txt_empty_phone">Campo de telefone vazio</string>
    <string name="error_txt_empty_name">Campo de nome vazio</string>
    <string name="error_txt_confirmation">Senha e confirmação diferentes</string>
    <string name="error_invalid_email">O endereço de e-mail está mal formatado.</string>
    <string name="error_invalid_phone">Número de telefone inválido</string>
    <string name="error_invalid_credentials">Credenciais inválidas, \nou este usuário não existe</string>
    <string name="error_cannot_save_image">Não foi possível salvar a imagem</string>
    <string name="error_cannot_load_image">Não foi possível carregar a imagem</string>
    <string name="dialog_permission_granted_title">Permissão aceita</string>
    <string name="dialog_permission_denied_title">Permissão negada</string>
    <string name="dialog_permission_denied_btn_close">Não</string>
    <string name="dialog_permission_denied_btn_setting">Sim</string>
    <string name="dialog_permission_camera_access_denied">Para que você possa capturar imagens, precisamos que você habilite permissão à câmera. \nDeseja ir para as configurações?</string>
    <string name="dialog_permission_gallery_access_denied">Para que você possa carregar imagens, precisamos que você habilite permissão à galeria. \nDeseja ir para as configurações?</string>
    <string name="splashFragment_logo_description">Logo</string>
    <string name="bottom_sheet_txt_title">Atenção</string>
    <string name="bottom_sheet_btn_title">OK</string>
    <string name="login_fragment_edit_txt_email">E-mail</string>
    <string name="login_fragment_edit_txt_password">Senha</string>
    <string name="login_fragment_txt_btn_login">ENTRAR</string>
    <string name="login_fragment_txt_create_account">Criar conta</string>
    <string name="login_fragment_edit_txt_recover">Recuperar conta</string>
    <string name="register_fragment_toolbar_txt_recover">Criar conta</string>
    <string name="register_fragment_txt_name">Nome</string>
    <string name="register_fragment_edit_txt_name">Digite seu nome</string>
    <string name="register_fragment_txt_email">E-mail</string>
    <string name="register_fragment_edit_txt_email">Digite seu e-mail</string>
    <string name="register_fragment_txt_phone">Telefone</string>
    <string name="register_fragment_edit_txt_phone">Digite seu número de telefone</string>
    <string name="register_fragment_txt_password">Senha</string>
    <string name="register_fragment_edit_txt_password">Crie sua senha</string>
    <string name="register_fragment_txt_confirm">Confirmar</string>
    <string name="register_fragment_edit_txt_confirm">Confirme sua senha</string>
    <string name="register_fragment_txt_btn_register">CADASTRAR</string>
    <string name="register_fragment_bottom_sheet_register_success">Usuário cadastrado com sucesso</string>
    <string name="recover_fragment_toolbar_txt">Recuperação de senha</string>
    <string name="recover_fragment_txt_instructions">Digite seu e-mail para receber um link de recuperação</string>
    <string name="recover_fragment_txt_email">E-mail</string>
    <string name="recover_fragment_edit_txt_email">Digite seu e-mail</string>
    <string name="recover_fragment_btn_txt">ENVIAR E-MAIL</string>
    <string name="recover_fragment_bottom_sheet_success_recover">Link de recuperação enviado com sucesso para o seu e-mail</string>
    <string name="home_fragment_empty_transactions_list">Nenhuma atividade encontrada</string>
    <string name="home_fragment_menu_deposit">Depositar</string>
    <string name="home_fragment_menu_recharge">Recarga de telefone</string>
    <string name="home_fragment_menu_bank_statement">Extrato bancário</string>
    <string name="home_fragment_menu_transference">Transferir</string>
    <string name="home_fragment_menu_profile">Editar Perfil</string>
    <string name="home_fragment_last_transaction_transference">TRANSFERÊNCIA</string>
    <string name="home_fragment_my_balance">Meu saldo</string>
    <string name="home_fragment_balance_mock">R$ 0,00</string>
    <string name="home_fragment_last_six_activities">Últimas 6 atividades</string>
    <string name="home_fragment_view_all_transactions">Ver todas</string>
    <string name="home_fragment_currency_symbol">R$ %1$s</string>
    <string name="home_fragment_mock_last_transaction_value">R$ -60,00</string>
    <string name="home_fragment_mock_last_transaction_date">31/12/2023</string>
    <string name="deposit_form_fragment_txt_btn_continue">CONFIRMAR</string>
    <string name="deposit_form_fragment_toolbar_txt_deposit">Depositar</string>
    <string name="deposit_form_fragment_txt_instructions">Por favor, informe o valor a ser depositado</string>
    <string name="deposit_form_fragment_label_deposit_amount">Valor do depósito</string>
    <string name="deposit_form_fragment_message_deposit_empty">Informe o valor do depósito</string>
    <string name="deposit_form_fragment_deposit_operation">DEPÓSITO</string>
    <string name="deposit_form_fragment_deposit_operation_char">D</string>
    <string name="deposit_form_fragment_toast_deposit_success">Depósito realizado</string>
    <string name="deposit_receipt_fragment_txt_btn_continue">OK</string>
    <string name="deposit_receipt_fragment_toolbar_txt_receipt">Recibo</string>
    <string name="deposit_receipt_fragment_title_receipt_success">Depósito realizado\ncom sucesso</string>
    <string name="deposit_receipt_fragment_subtitle_receipt_success">Depósito disponível em até 3 dias úteis</string>
    <string name="deposit_receipt_fragment_txt_code_transaction">Código Transação</string>
    <string name="deposit_receipt_fragment_txt_date_transaction">Data do depósito</string>
    <string name="deposit_receipt_fragment_txt_value_transaction">Valor do depósito</string>
    <string name="recharge_receipt_fragment_txt_btn_continue">OK</string>
    <string name="recharge_receipt_fragment_toolbar_txt_receipt">Recibo</string>
    <string name="recharge_receipt_fragment_title_receipt_success">Recarga realizada\ncom sucesso</string>
    <string name="recharge_receipt_fragment_subtitle_receipt_success">Seu crédito estará disponível em alguns minutos</string>
    <string name="recharge_receipt_fragment_txt_code_transaction">Código Transação</string>
    <string name="recharge_receipt_fragment_txt_date_transaction">Data da recarga</string>
    <string name="recharge_receipt_fragment_txt_number">Número"</string>
    <string name="recharge_receipt_fragment_txt_value_transaction">Valor da recarga</string>
    <string name="bank_statement_fragment_toolbar_txt_bank_statement">Extrato</string>
    <string name="bank_statement_fragment_empty_transactions_list">Nenhuma atividade encontrada</string>
    <string name="profile_fragment_toolbar_txt_profile">Editar Perfil</string>
    <string name="profile_fragment_txt_name">Nome</string>
    <string name="profile_fragment_edit_txt_name">Digite seu nome</string>
    <string name="profile_fragment_txt_email">E-mail</string>
    <string name="profile_fragment_edit_txt_email">Digite seu e-mail</string>
    <string name="profile_fragment_txt_phone">Telefone</string>
    <string name="profile_fragment_edit_txt_phone">Digite seu número de telefone</string>
    <string name="profile_fragment_txt_btn_register">SALVAR</string>
    <string name="profile_fragment_toast_save_profile_success">Perfil salvo com sucesso</string>
    <string name="profile_fragment_bottom_sheet_title">Adicionar imagem ao perfil</string>
    <string name="profile_fragment_bottom_sheet_message">Escolha uma opção para adicionar\numa imagem ao perfil</string>
    <string name="profile_fragment_bottom_sheet_btn_camera">CÂMERA</string>
    <string name="profile_fragment_bottom_sheet_btn_gallery">GALERIA</string>
    <string name="recharge_form_fragment_txt_btn_continue">CONFIRMAR</string>
    <string name="recharge_form_fragment_toolbar_txt_recharge">Recarga</string>
    <string name="recharge_form_fragment_label_recharge_amount">Valor da recarga</string>
    <string name="recharge_form_fragment_label_recharge_phone_number">Informe o número do telefone</string>
    <string name="recharge_form_fragment_recharge_edit_text_number">(35) 99999-9999</string>
    <string name="deposit_form_fragment_bottom_sheet_amount_invalid">Recarga mínima de R$ 10,00</string>
    <string name="transfer_user_list_fragment_toolbar_txt_transference">Usuários</string>
    <string name="transfer_user_list_fragment_empty_users_list">Nenhum usuário encontrado</string>
    <string name="transfer_form_fragment_txt_btn_continue">CONTINUAR</string>
    <string name="transfer_form_fragment_toolbar_txt_deposit">Transferir</string>
    <string name="transfer_form_fragment_txt_instructions">Por favor, informe o valor a ser transferido</string>
    <string name="transfer_form_fragment_label_deposit_amount">Valor da transferência</string>
    <string name="transfer_form_fragment_message_deposit_empty">Informe o valor da transferência</string>
    <string name="transfer_form_fragment_deposit_operation">TRANSFERÊNCIA</string>
    <string name="transfer_form_fragment_deposit_operation_char">T</string>
    <string name="transfer_form_fragment_toast_deposit_success">Transferência realizada</string>
    <string name="transfer_form_fragment_txt_transfer_mock_value">R$ 100,00</string>
    <string name="confirm_transfer_fragment_txt_btn_continue">CONFIRMAR</string>
    <string name="confirm_transfer_fragment_txt_btn_ok">OK</string>
    <string name="confirm_transfer_fragment_toolbar_txt_transfer">Transferência</string>
    <string name="confirm_transfer_fragment_title_transfer_confirm">Confirme os dados antes de\n realizar a transferencia</string>
    <string name="confirm_transfer_fragment_subtitle_transfer_warning">Após clicar em confirmar,\n a transferência não pode ser desfeita</string>
    <string name="confirm_transfer_fragment_txt_transfer_target">Receberá a transferencia:</string>
    <string name="confirm_transfer_fragment_txt_date_transaction">Data da transferência</string>
    <string name="confirm_transfer_fragment_txt_transfer_value">Valor da transferência</string>
    <string name="confirm_fragment_bottom_sheet_insufficient_funds">Saldo insuficiente</string>
    <string name="transfer_receipt_fragment_txt_btn_continue">OK</string>
    <string name="transfer_receipt_fragment_toolbar_txt_receipt">Recibo</string>
    <string name="transfer_receipt_fragment_title_receipt_success">Transferêcia efetuada\n com sucesso</string>
    <string name="transfer_receipt_fragment_subtitle_receipt_success">Transferência realizada. A previsão do crédito na\n conta destino é de até 30 minutos</string>
    <string name="transfer_receipt_fragment_txt_transfer_recipient">Recebeu a transferência:</string>
    <string name="transfer_receipt_fragment_txt_transfer_sender">Enviou a transferência:</string>
    <string name="transfer_receipt_fragment_txt_date_transaction">Data da transferência</string>
    <string name="transfer_receipt_fragment_txt_value_transaction">Valor da transferência</string>
    <string name="transfer_receipt_fragment_txt_code_transaction">Código Transação</string>
    <string name="transfer_receipt_fragment_txt_transfer_mock_value">R$ 100,00</string>
</resources>