<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20sp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/profile_fragment_bottom_sheet_title"
        android:textColor="@color/color_default"/>

    <com.google.android.material.divider.MaterialDivider
        style="@style/divider"
        android:layout_marginVertical="16dp"/>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/profile_fragment_bottom_sheet_message"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_fragment_bottom_sheet_btn_camera"
        android:background="@drawable/bg_button"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_fragment_bottom_sheet_btn_gallery"
        android:background="@drawable/bg_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>