<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".presenter.profile.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/profile_fragment_toolbar_txt_profile"
                    android:textColor="@color/color_default" />

            </androidx.appcompat.widget.Toolbar>

            <androidx.drawerlayout.widget.DrawerLayout
                style="@style/divider"/>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="50dp"
                app:strokeColor="@color/color_default"
                app:strokeWidth="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_user_line_blue" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/txtName"
                android:text="@string/profile_fragment_txt_name"
                android:layout_marginTop="32dp"
                style="@style/txtRegisterLabels"/>

            <EditText

                android:id="@+id/editName"
                style="@style/editRegisterTextStyle"
                android:drawableStart="@drawable/ic_user_line"
                android:hint="@string/profile_fragment_edit_txt_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtPhone"
                android:text="@string/profile_fragment_txt_phone"
                style="@style/txtRegisterLabels"/>

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/editPhone"
                style="@style/editRegisterTextStyle"
                android:drawableStart="@drawable/ic_phone_line"
                android:hint="@string/profile_fragment_edit_txt_phone"
                android:inputType="phone"
                app:mask="(##) #####-####"/>

            <TextView
                android:id="@+id/txtEmail"
                android:text="@string/profile_fragment_txt_email"
                style="@style/txtRegisterLabels"/>

            <EditText
                android:id="@+id/editEmail"
                style="@style/editRegisterTextStyle"
                android:drawableStart="@drawable/ic_email_line"
                tools:hint="@string/profile_fragment_edit_txt_email"
                android:textColor="@color/color_text_hint"
                android:drawableTint="@color/color_text_hint"
                android:inputType="textWebEmailAddress"
                android:enabled="false"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button"
                android:text="@string/profile_fragment_txt_btn_register"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:indeterminateTint="@color/color_default"
                android:visibility="invisible"
                tools:visibility="visible"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>