<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/txt_transaction_type"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="#EE4046"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="T" />

    <TextView
        android:id="@+id/txt_transaction_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/txt_transaction_type"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/home_fragment_last_transaction_transference"/>

    <TextView
        android:id="@+id/txt_transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_transaction_type"
        app:layout_constraintTop_toBottomOf="@+id/txt_transaction_description"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/home_fragment_mock_last_transaction_date" />

    <TextView
        android:id="@+id/txt_transaction_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_transaction_type"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/home_fragment_mock_last_transaction_value" />

</androidx.constraintlayout.widget.ConstraintLayout>